# frvt-verismart

./: .gitignore
11/: CMakeLists.txt  README.md  requirements.txt
11/config/: frvt11_worker.py
11/scripts/: run_testdriver.sh  stage_frvt11_assets.sh
11/src/nullImpl/: CMakeLists.txt  nullimplfrvt11.cpp  nullimplfrvt11.h
11/src/testdriver/: validate11.cpp
11_from_vm/11/: run_validate_11.sh
11_from_vm/11/config/: resnet100.py
11_from_vm/11/input/: enroll.txt  enroll_multiface.txt  match_multiperson.txt  short_enroll.txt  verif.txt  verif_multiperson.txt
11_from_vm/11/scripts/: build_null_impl.sh  convert_adaface_to_onnx.py  convert_requirements.txt  run_testdriver.sh  setup_ort.sh
11_from_vm/11/src/include/: frvt11.h
11_from_vm/11/src/nullImpl/: CMakeLists.txt  frvt11_worker.py  nullimplfrvt11.cpp  nullimplfrvt11.h
11_from_vm/11/src/testdriver/: CMakeLists.txt
1N/: CMakeLists.txt  README.md
1N/scripts/: run_testdriver.sh
1N/src/nullImpl/: CMakeLists.txt
1N/src/testdriver/: CMakeLists.txt  validate1N.cpp
age-estimation/: CMakeLists.txt  README.md
age-estimation/scripts/: run_testdriver.sh
age-estimation/src/nullImpl/: CMakeLists.txt
age-estimation/src/testdriver/: CMakeLists.txt  validate_ae.cpp
common/scripts/: count_threads.sh  utils.sh
common/src/include/: frvt_structs.h
five/: CMakeLists.txt  README.md
five/scripts/: run_testdriver.sh
five/src/nullImpl/: CMakeLists.txt
five/src/testdriver/: CMakeLists.txt  validate_five.cpp
morph/: CMakeLists.txt  README.md
morph/scripts/: build_null_impl_python.sh
morph/src/nullImpl/: CMakeLists.txt
morph/src/nullImpl_python/: CMakeLists.txt  morph_detector.py  nullimplfrvtmorph.cpp  nullimplfrvtmorph.h
morph/src/testdriver/: CMakeLists.txt  validate_morph.cpp
quality/: CMakeLists.txt  README.md
quality/scripts/: run_testdriver.sh
quality/src/nullImpl/: CMakeLists.txt
quality/src/testdriver/: CMakeLists.txt  validate_quality.cpp
twins-demonstration/: CMakeLists.txt  README.md
twins-demonstration/scripts/: run_testdriver.sh
twins-demonstration/src/nullImpl/: CMakeLists.txt  nullimplfrvt11_twins.cpp  nullimplfrvt11_twins.h
twins-demonstration/src/testdriver/: CMakeLists.txt
